--- a/clock-style.css
+++ b/clock-style.css
@@ -5,7 +5,7 @@
   }
 
   body{
-    background-image: url(Images/820.gif);
+    background-image: url(820.gif);
     width: 100%;
     height: 100vh;
     background-color: black;
